# msgpack-serde-bench

./: Cargo.toml
src/: main.rs
